# fastapi-app-manage

./: .gitignore  README.md  pyproject.toml  test.toml
examples/example_1_pip/: fastapi-app-manage.toml  main.py  requirements.txt
examples/example_1_poetry/: fastapi-app-manage.toml  main.py  pyproject.toml  settings.py
examples/example_1_poetry/app/core/: lifespan.py
examples/example_1_poetry/app/models/: tail.py
examples/example_1_poetry/app/router/: __init__.py  tail.py
examples/example_1_poetry/app/service/: tail.py
examples/example_1_poetry/app/templates/: index.html
examples/example_2_pip/: fastapi-app-manage.toml  requirements.txt  settings.py
examples/example_2_pip/app/core/: database.py
examples/example_2_pip/app/router/: __init__.py  user.py
examples/example_2_pip/app/service/: user.py
examples/example_2_poetry/: fastapi-app-manage.toml  pyproject.toml  settings.py
examples/example_2_poetry/app/core/: lifespan.py
examples/example_2_poetry/app/models/: user.py
examples/example_2_poetry/app/router/: user.py
examples/example_3_poetry/: fastapi-app-manage.toml  pyproject.toml  settings.py
examples/example_3_poetry/app/core/: result.py
fastapi_app_manage/: code.py  enums.py  format.py  get_package_version.py  main.py  manage.py  util.py  write.py  write_dict_2_tom.py
fastapi_app_manage/utils/: format.py  get_package.py  get_package_version.py  typedict.py  write_dict_2_toml_file.py
