[tool.poetry]
name = "fastapi-app-manage"
version = "0.3.1"
description = "fastapi-app-manage make fastapi dev easy"
authors = [
    "tiebingice",
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.1"
questionary = "^2.1.0"
requests = "^2.32.3"
tomlkit = "^0.13.2"
black = "^24.10.0"




[tool.poetry.scripts]
fastapi-app = "fastapi_app_manage.main:app"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
