[tool.poetry]
name = "example-3-poetry"
version = "0.1.0"
description = ""
authors = ["tiebingice <1206345694@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic_settings = "^2.7.1"
typing_inspect = "^0.9.0"
fastapi-utils = "^0.8.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"


[tool.poetry.group.dev.dependencies]
fastapi-app-manage = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
